프롬프트 분리